// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCustomSMConnector wizard CreateCustomSMConnector step one 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
          data-icon="custom-sm"
        >
          <svg
            height="50"
            viewBox="0 0 42 42"
            width="50"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M9.578 6.098c-.572 0-1.035.477-1.035 1.066v21.564c0 .397.214.761.555.945l11.38 6.12c.3.161.659.161.96 0l11.38-6.12a1.07 1.07 0 00.555-.945v-10.37c0-.588.464-1.065 1.035-1.065.572 0 1.035.477 1.035 1.066v10.37c0 1.19-.642 2.282-1.667 2.833l-11.38 6.12a3.03 3.03 0 01-2.876 0l-11.38-6.12c-1.025-.551-1.668-1.643-1.668-2.834V7.164c0-1.766 1.39-3.197 3.106-3.197h14.146c.571 0 1.035.477 1.035 1.066 0 .588-.464 1.065-1.035 1.065H9.578z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M24.447 14.01a2.552 2.552 0 10-5.104.001 2.552 2.552 0 005.104 0zm-2.552-4.593a4.594 4.594 0 110 9.187 4.594 4.594 0 010-9.187z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M22.562 31.041a1.02 1.02 0 01-.732.313h-3.512c-.572 0-1.035-.478-1.035-1.066 0-.589.463-1.066 1.035-1.066h2.477v-2.035h-2.261c-.572 0-1.036-.477-1.036-1.065 0-.589.464-1.066 1.036-1.066h2.26v-7.104c0-.589.464-1.066 1.036-1.066.572 0 1.036.477 1.036 1.066v12.336c0 .282-.11.554-.304.753z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.customSecretManager
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3"
          data-cy="connector-overview-heading"
        >
          overview
        </p>
        <div
          class="StyledProps--font StyledProps--main connectorForm"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              action="#"
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <div
                          class="Text--withDocsTooltip"
                          data-tooltip-id="universalInputNameWithId"
                        >
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            Id
                          </p>
                        </div>
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              />
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Edit"
                          style="vertical-align: middle; cursor: pointer;"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group bp3-intent-danger"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="connectorDetailsStepFormCustomSecretManager_name"
                          >
                            name
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group bp3-intent-danger"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              placeholder="common.namePlaceholder"
                              type="text"
                              value=""
                            />
                          </div>
                          <div
                            class="bp3-form-helper-text"
                          >
                            <div
                              class="FormError--errorDiv"
                              data-name="name"
                            >
                              <span
                                class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                                data-icon="circle-cross"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 13 13"
                                  width="12"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                              <span
                                class="FormError--error"
                              >
                                common.validation.nameIsRequired
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main bp3-label descriptionLabel"
                      >
                        optionalField
                        <span
                          class="bp3-icon StyledProps--main editOpen"
                          data-icon="Edit"
                          data-name="edit"
                          data-testid="description-edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main bp3-label descriptionLabel"
                      >
                        optionalField
                        <span
                          class="bp3-icon StyledProps--main editOpen"
                          data-icon="Edit"
                          data-name="edit"
                          data-testid="tags-edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`CreateCustomSMConnector wizard CreateCustomSMConnector step two 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
          data-icon="custom-sm"
        >
          <svg
            height="50"
            viewBox="0 0 42 42"
            width="50"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M9.578 6.098c-.572 0-1.035.477-1.035 1.066v21.564c0 .397.214.761.555.945l11.38 6.12c.3.161.659.161.96 0l11.38-6.12a1.07 1.07 0 00.555-.945v-10.37c0-.588.464-1.065 1.035-1.065.572 0 1.035.477 1.035 1.066v10.37c0 1.19-.642 2.282-1.667 2.833l-11.38 6.12a3.03 3.03 0 01-2.876 0l-11.38-6.12c-1.025-.551-1.668-1.643-1.668-2.834V7.164c0-1.766 1.39-3.197 3.106-3.197h14.146c.571 0 1.035.477 1.035 1.066 0 .588-.464 1.065-1.035 1.065H9.578z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M24.447 14.01a2.552 2.552 0 10-5.104.001 2.552 2.552 0 005.104 0zm-2.552-4.593a4.594 4.594 0 110 9.187 4.594 4.594 0 010-9.187z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M22.562 31.041a1.02 1.02 0 01-.732.313h-3.512c-.572 0-1.035-.478-1.035-1.066 0-.589.463-1.066 1.035-1.066h2.477v-2.035h-2.261c-.572 0-1.036-.477-1.036-1.065 0-.589.464-1.066 1.036-1.066h2.26v-7.104c0-.589.464-1.066 1.036-1.066.572 0 1.036.477 1.036 1.066v12.336c0 .282-.11.554-.304.753z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.customSecretManager
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-medium"
        style="height: 100%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--padding-bottom-xlarge"
        >
          connectors.customSM.details
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main"
                style="min-height: 450px;"
              >
                <div
                  class="bp3-form-group"
                  data-id="template-0"
                >
                  <label
                    class="bp3-label"
                    for="template"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="customSMForm_template"
                    >
                      Shell Script
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                    >
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
                        style="max-width: 400px;"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                          data-icon="template-library"
                        >
                          <svg
                            height="16"
                            viewBox="0 0 12 13"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlns:xlink="http://www.w3.org/1999/xlink"
                          >
                            <defs>
                              <path
                                d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7h1.4zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7h1.4z"
                                id="template-library_svg__a"
                              />
                            </defs>
                            <clippath
                              id="template-library_svg__b"
                            >
                              <use
                                overflow="visible"
                                xlink:href="#template-library_svg__a"
                              />
                            </clippath>
                            <path
                              clip-path="url(#template-library_svg__b)"
                              d="M-5-5h22v23H-5z"
                              fill="#25a6f7"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main"
                          >
                            <p
                              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white"
                            >
                              Selected: 
                            </p>
                            <p
                              class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-white"
                              style="--text-line-clamp: 1;"
                            >
                              New_SecretManager_Template_Name_1
                              (
                              2
                              )
                            </p>
                          </div>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="formGroup"
                >
                  <div
                    class="bp3-form-group"
                  >
                    <label
                      class="bp3-label"
                      for="templateInputs.environmentVariables"
                    >
                      <div
                        class="formLabel"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="customSMForm_templateInputs.environmentVariables"
                        >
                          common.inputVariables
                        </span>
                      </div>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="panel maxHeightScroll"
                      >
                        <div
                          class="environmentVarHeader gridFourColumn"
                        >
                          <span
                            class="label"
                          >
                            Name
                          </span>
                          <span
                            class="label"
                          >
                            Type
                          </span>
                          <span
                            class="label"
                          >
                            Value
                          </span>
                          <span
                            class="label"
                          >
                            Fixed
                          </span>
                        </div>
                        <div
                          class="environmentVarHeader gridFourColumn"
                        >
                          <div
                            class="bp3-form-group bp3-disabled"
                          >
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group bp3-disabled"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  disabled=""
                                  name="templateInputs.environmentVariables[0].name"
                                  placeholder="name"
                                  type="text"
                                  value="key"
                                />
                              </div>
                            </div>
                          </div>
                          <div
                            class="bp3-form-group bp3-disabled"
                          >
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-popover-wrapper Select--main bp3-fill"
                              >
                                <div
                                  class="bp3-popover-target"
                                >
                                  <div
                                    class="bp3-input-group bp3-disabled"
                                  >
                                    <input
                                      autocomplete="off"
                                      class="bp3-input"
                                      disabled=""
                                      name="templateInputs.environmentVariables[0].type"
                                      placeholder="- typeLabel -"
                                      style="padding-right: 0px;"
                                      type="text"
                                      value="String"
                                    />
                                    <span
                                      class="bp3-input-action"
                                    >
                                      <span
                                        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                        icon="chevron-down"
                                      >
                                        <svg
                                          data-icon="chevron-down"
                                          height="14"
                                          viewBox="0 0 16 16"
                                          width="14"
                                        >
                                          <desc>
                                            chevron-down
                                          </desc>
                                          <path
                                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                            fill-rule="evenodd"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="bp3-form-group bp3-intent-danger"
                          >
                            
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                              >
                                <div
                                  class="bp3-input-group MultiTypeInput--input"
                                >
                                  <input
                                    autocomplete="off"
                                    class="bp3-input"
                                    name="templateInputs.environmentVariables[0].value"
                                    type="text"
                                    value=""
                                  />
                                </div>
                                <span
                                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                >
                                  <span
                                    class="bp3-popover-target"
                                  >
                                    <button
                                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                    >
                                      <span
                                        class="bp3-icon StyledProps--main"
                                        data-icon="fixed-input"
                                      >
                                        <svg
                                          height="12"
                                          viewBox="0 0 9 9"
                                          width="12"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <path
                                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                            fill="currentColor"
                                          />
                                        </svg>
                                      </span>
                                    </button>
                                  </span>
                                </span>
                              </div>
                              <div
                                class="bp3-form-helper-text"
                              >
                                <div
                                  class="FormError--errorDiv"
                                  data-name="templateInputs.environmentVariables[0].value"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                                    data-icon="circle-cross"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 13 13"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        clip-rule="evenodd"
                                        d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    class="FormError--error"
                                  >
                                    common.validation.valueIsRequired
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="bp3-form-group"
                          >
                            <div
                              class="bp3-form-content"
                            >
                              <label
                                class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox fixed StyledProps--main StyledProps--inline"
                              >
                                <input
                                  name="templateInputs.environmentVariables[0].useAsDefault"
                                  type="checkbox"
                                />
                                <span
                                  class="bp3-control-indicator"
                                />
                                
                              </label>
                            </div>
                          </div>
                        </div>
                        <div
                          class="environmentVarHeader gridFourColumn"
                        >
                          <div
                            class="bp3-form-group bp3-disabled"
                          >
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group bp3-disabled"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  disabled=""
                                  name="templateInputs.environmentVariables[1].name"
                                  placeholder="name"
                                  type="text"
                                  value="engine"
                                />
                              </div>
                            </div>
                          </div>
                          <div
                            class="bp3-form-group bp3-disabled"
                          >
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-popover-wrapper Select--main bp3-fill"
                              >
                                <div
                                  class="bp3-popover-target"
                                >
                                  <div
                                    class="bp3-input-group bp3-disabled"
                                  >
                                    <input
                                      autocomplete="off"
                                      class="bp3-input"
                                      disabled=""
                                      name="templateInputs.environmentVariables[1].type"
                                      placeholder="- typeLabel -"
                                      style="padding-right: 0px;"
                                      type="text"
                                      value="String"
                                    />
                                    <span
                                      class="bp3-input-action"
                                    >
                                      <span
                                        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                        icon="chevron-down"
                                      >
                                        <svg
                                          data-icon="chevron-down"
                                          height="14"
                                          viewBox="0 0 16 16"
                                          width="14"
                                        >
                                          <desc>
                                            chevron-down
                                          </desc>
                                          <path
                                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                            fill-rule="evenodd"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="bp3-form-group bp3-intent-danger"
                          >
                            
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                              >
                                <div
                                  class="bp3-input-group MultiTypeInput--input"
                                >
                                  <input
                                    autocomplete="off"
                                    class="bp3-input"
                                    name="templateInputs.environmentVariables[1].value"
                                    type="text"
                                    value=""
                                  />
                                </div>
                                <span
                                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                >
                                  <span
                                    class="bp3-popover-target"
                                  >
                                    <button
                                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                    >
                                      <span
                                        class="bp3-icon StyledProps--main"
                                        data-icon="fixed-input"
                                      >
                                        <svg
                                          height="12"
                                          viewBox="0 0 9 9"
                                          width="12"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <path
                                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                            fill="currentColor"
                                          />
                                        </svg>
                                      </span>
                                    </button>
                                  </span>
                                </span>
                              </div>
                              <div
                                class="bp3-form-helper-text"
                              >
                                <div
                                  class="FormError--errorDiv"
                                  data-name="templateInputs.environmentVariables[1].value"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                                    data-icon="circle-cross"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 13 13"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        clip-rule="evenodd"
                                        d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    class="FormError--error"
                                  >
                                    common.validation.valueIsRequired
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="bp3-form-group"
                          >
                            <div
                              class="bp3-form-content"
                            >
                              <label
                                class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox fixed StyledProps--main StyledProps--inline"
                              >
                                <input
                                  name="templateInputs.environmentVariables[1].useAsDefault"
                                  type="checkbox"
                                />
                                <span
                                  class="bp3-control-indicator"
                                />
                                
                              </label>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="onDelegate-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                    >
                      <input
                        checked=""
                        name="onDelegate"
                        placeholder="typeLabel"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                        data-tooltip-id="customSMForm_onDelegate"
                      >
                        Execute on Delegate
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    back
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;
